# greed

./: .bzrignore  CHANGELOG  ChangeLog  Makefile  Makefile.in  README  changelog  changelog.old  configure.ac  greed-help-macro.el  greed-make.el  greed-md5.el  greed.el  greed.texi  update-dot-emacs
debian/: 50greed.el  changelog  control  copyright  install  postinst  prerm  remove  rules
